@@ -27,8 +27,6 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.math.BigInteger;
 import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.junit.jupiter.api.BeforeAll;
@@ -42,6 +40,7 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import ch.post.it.evoting.cryptoprimitives.collection.ImmutableList;
 import ch.post.it.evoting.cryptoprimitives.elgamal.ElGamalMultiRecipientCiphertext;
 import ch.post.it.evoting.cryptoprimitives.elgamal.ElGamalMultiRecipientPublicKey;
 import ch.post.it.evoting.cryptoprimitives.internal.hashing.HashService;
@@ -51,6 +50,7 @@ import ch.post.it.evoting.cryptoprimitives.math.GqGroup;
 import ch.post.it.evoting.cryptoprimitives.math.GroupMatrix;
 import ch.post.it.evoting.cryptoprimitives.math.GroupVector;
 import ch.post.it.evoting.cryptoprimitives.math.ZqElement;
+import ch.post.it.evoting.cryptoprimitives.math.ZqGroup;
 import ch.post.it.evoting.cryptoprimitives.mixnet.MultiExponentiationArgument;
 import ch.post.it.evoting.cryptoprimitives.mixnet.MultiExponentiationStatement;
 import ch.post.it.evoting.cryptoprimitives.mixnet.MultiExponentiationWitness;
@@ -108,7 +108,7 @@ class MultiExponentiationArgumentServiceTest extends TestGroupSetup {
 		l = randomService.genRandomInteger(publicKeySize) + 1;
 	}
 
-	////////// Utilities
+	/// /////// Utilities
 	private void assertThrowsIllegalArgumentExceptionWithMessage(final String errorMsg, final Executable executable) {
 		final Exception exception = assertThrows(IllegalArgumentException.class, executable);
 		assertEquals(errorMsg, exception.getMessage());
@@ -345,24 +345,69 @@ class MultiExponentiationArgumentServiceTest extends TestGroupSetup {
 		}
 
 		@Test
+		@SuppressWarnings("java:S117")
 		void testStatementWithModified_C_ElementDoesNotVerify() {
+			final GqGroup g29 = GroupTestData.getGroupP59();
+			final GqElement gqFour = GqElementFactory.fromValue(BigInteger.valueOf(4), g29);
+			final GqElement gqFive = GqElementFactory.fromValue(BigInteger.valueOf(5), g29);
+			final GqElement gqTwelve = GqElementFactory.fromValue(BigInteger.valueOf(12), g29);
+			final GqElement gqSeventeen = GqElementFactory.fromValue(BigInteger.valueOf(17), g29);
+			final GqElement gqFiftyOne = GqElementFactory.fromValue(BigInteger.valueOf(51), g29);
+			final ZqGroup z29 = ZqGroup.sameOrderAs(g29);
+			final ZqElement two = ZqElement.create(2, z29);
+			final ZqElement three = ZqElement.create(3, z29);
+			final ZqElement four = ZqElement.create(4, z29);
+			final GroupMatrix<ZqElement, ZqGroup> AMatrix = GroupMatrix.fromColumns(
+					GroupVector.of(
+							GroupVector.of(two, three),
+							GroupVector.of(three, four)
+					)
+			);
+			final GroupVector<ZqElement, ZqGroup> rExponents = GroupVector.of(four, ZqElement.create(11, z29));
+			final ZqElement rhoExponents = ZqElement.create(23, z29);
+			final MultiExponentiationWitness witness = new MultiExponentiationWitness(AMatrix, rExponents, rhoExponents);
+
+			final GroupMatrix<ElGamalMultiRecipientCiphertext, GqGroup> CMatrix = GroupMatrix.fromRows(
+					GroupVector.of(
+							GroupVector.of(
+									ElGamalMultiRecipientCiphertext.create(gqFour, GroupVector.of(gqTwelve, gqFive)),
+									ElGamalMultiRecipientCiphertext.create(gqFiftyOne, GroupVector.of(gqFive, gqFour))
+							),
+							GroupVector.of(
+									ElGamalMultiRecipientCiphertext.create(gqSeventeen, GroupVector.of(gqTwelve, gqTwelve)),
+									ElGamalMultiRecipientCiphertext.create(gqFiftyOne, GroupVector.of(gqFive, gqSeventeen))
+							))
+			);
+
+			final ElGamalMultiRecipientPublicKey pk = new ElGamalMultiRecipientPublicKey(GroupVector.of(gqFiftyOne, gqFive));
+			final CommitmentKey ck = new CommitmentKey(gqFive, GroupVector.of(gqTwelve, gqSeventeen));
+			final HashService testHashService = TestHashService.create(g29.getQ());
+			final MultiExponentiationArgumentService testArgumentService = new MultiExponentiationArgumentService(pk, ck, randomService, testHashService);
+			final ElGamalMultiRecipientCiphertext computedC = testArgumentService.multiExponentiation(CMatrix, AMatrix, rhoExponents, 2, 2);
+			final GroupVector<GqElement, GqGroup> commitmentToA = CommitmentService.getCommitmentMatrix(AMatrix, rExponents, ck);
+			final MultiExponentiationStatement statement = new MultiExponentiationStatement(CMatrix, computedC, commitmentToA);
+			final MultiExponentiationArgument argument = testArgumentService.getMultiExponentiationArgument(statement, witness);
+			final VerificationResult verificationResult = testArgumentService.verifyMultiExponentiationArgument(statement, argument).verify();
+			assertTrue(verificationResult.isVerified());
+
 			final GroupMatrix<ElGamalMultiRecipientCiphertext, GqGroup> modifiedCMatrix = GroupMatrix.fromRows(
-					validStatement.get_C_matrix().rowStream().map(r -> r.stream().map(c -> c.getCiphertextExponentiation(
-							zqTwo)).collect(Collectors.toList())).collect(Collectors.toList()));
+					statement.get_C_matrix().rowStream()
+							.map(r -> r.stream().map(c -> c.getCiphertextExponentiation(two)).collect(toGroupVector()))
+							.collect(toGroupVector()));
 			final MultiExponentiationStatement modifiedStatement = new MultiExponentiationStatement(
 					modifiedCMatrix,
-					validStatement.get_C(),
-					validStatement.get_c_A()
+					statement.get_C(),
+					statement.get_c_A()
 			);
-			final VerificationResult verificationResult = argumentService.verifyMultiExponentiationArgument(modifiedStatement, validArgument)
-					.verify();
-			assertFalse(verificationResult.isVerified());
+			final VerificationResult verificationResultModified = testArgumentService.verifyMultiExponentiationArgument(modifiedStatement, argument).verify();
+			assertFalse(verificationResultModified.isVerified());
 		}
 
 		@Test
 		void testStatementWithModified_C_DoesNotVerify() {
-			final ElGamalMultiRecipientCiphertext modifiedC = ElGamalMultiRecipientCiphertext.create(validStatement.get_C().getGamma(),
-					validStatement.get_C().stream().skip(1).map(gqGroupGenerator::otherElement).collect(Collectors.toList()));
+			final ElGamalMultiRecipientCiphertext modifiedC = ElGamalMultiRecipientCiphertext.create(
+					validStatement.get_C().getGamma(),
+					validStatement.get_C().stream().skip(1).map(gqGroupGenerator::otherElement).collect(toGroupVector()));
 			final MultiExponentiationStatement modifiedStatement = new MultiExponentiationStatement(
 					validStatement.get_C_matrix(),
 					modifiedC,
@@ -371,7 +416,7 @@ class MultiExponentiationArgumentServiceTest extends TestGroupSetup {
 			final VerificationResult verificationResult = argumentService.verifyMultiExponentiationArgument(modifiedStatement, validArgument)
 					.verify();
 			assertFalse(verificationResult.isVerified());
-			assertEquals("E_m must equal C.", verificationResult.getErrorMessages().getFirst());
+			assertEquals("E_m must equal C.", verificationResult.getErrorMessages().get(0));
 		}
 
 		@Test
@@ -502,7 +547,7 @@ class MultiExponentiationArgumentServiceTest extends TestGroupSetup {
 		}
 
 		Stream<Arguments> verifyMultiExponentiationArgumentRealValueProvider() {
-			final List<TestParameters> parametersList = TestParameters.fromResource("/mixnet/verify-multiexp-argument.json");
+			final ImmutableList<TestParameters> parametersList = TestParameters.fromResource("/mixnet/verify-multiexp-argument.json");
 
 			return parametersList.stream().parallel().map(testParameters -> {
 				// TestContextParser.
@@ -524,7 +569,7 @@ class MultiExponentiationArgumentServiceTest extends TestGroupSetup {
 
 				// Output.
 				final JsonData output = testParameters.getOutput();
-				final boolean outputValue = Boolean.parseBoolean(output.toString());
+				final boolean outputValue = Boolean.parseBoolean(output.getJsonData("result").toString());
 
 				return Arguments.of(publicKey, commitmentKey, multiExpStatement, multiExpArgument, outputValue, testParameters.getDescription());
 			});
